docs: change project description

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "license": "MIT",
   "author": "Get In",
-  "description": "Design system from Get In",
+  "description": "Appetizer é uma UI Kit em React que ajuda os desenvolvedores e designers do @getinapp a construir interfaces de usuário consistentes e sem esforço.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/getinapp/appetizer.git"
