--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/getinapp/appetizer#readme",
   "scripts": {
+    "build": "tsc",
+    "release": "auto shipit --no-changelog --base-branch=master --email=wendelfreitasbranco@gmail.com",
     "commit": "git-cz",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
@@ -46,6 +48,7 @@
     "@types/react": "^17.0.19",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
+    "auto": "^10.31.0",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.9.2",
     "commitizen": "^4.2.4",
