chore: add generate static public files in scripts

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "build": "tsc",
     "release": "auto shipit --no-changelog --base-branch=master --email=wendelfreitasbranco@gmail.com",
     "commit": "git-cz",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -s ./public -p 6006",
+    "build-storybook": "build-storybook -s ./public",
     "lint": "eslint src --max-warnings=0",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "test": "jest --collectCoverageFrom=!src/**/*.stories.tsx",
