--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "husky": "^7.0.2",
     "hygen": "^6.1.0",
     "jest": "^27.1.0",
+    "jest-styled-components": "^7.0.5",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
