--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "type": "git",
     "url": "git+https://github.com/getinapp/appetizer.git"
   },
+  "files": [
+    "dist/**"
+  ],
   "keywords": [
     "design",
     "react",
