--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "baseUrl": "src",
     "outDir": "dist",
-    "module": "esnext",
-    "target": "es5",
+    "target": "es6",
+    "module": "commonjs",
+    "moduleResolution": "node",
     "lib": ["es6", "dom"],
     "sourceMap": true,
     "allowJs": true,
     "jsx": "react",
-    "moduleResolution": "node",
     "rootDir": "src",
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
