--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getinapp/appetizer",
-  "version": "1.1.4",
+  "version": "1.1.3",
   "main": "dist/index.js",
   "license": "MIT",
   "author": "Get In",
@@ -119,7 +119,9 @@
     }
   },
   "dependencies": {
+    "polished": "^4.1.3",
     "react-icons": "^4.3.1",
+    "react-select": "^5.2.1",
     "styled-components": "^5.3.1"
   }
 }
