--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react": "^17.0.38",
     "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.19",
+    "@types/uniqid": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "auto": "^10.32.5",
@@ -92,6 +93,7 @@
     "collectCoverageFrom": [
       "src/**/*.ts(x)?",
       "!src/**/*.stories.tsx",
+      "!dist/*",
       "!src/index.ts",
       "!src/styles/**"
     ],
@@ -122,7 +124,9 @@
   "dependencies": {
     "@styled-icons/fluentui-system-filled": "^10.35.0",
     "@styled-icons/ionicons-solid": "^10.34.0",
+    "react-imask": "^6.0.7",
     "react-modal": "^3.14.4",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uniqid": "^5.4.0"
   }
 }
