--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@getinapp/appetizer",
   "version": "1.2.3",
-  "main": "dist/index.js",
-  "license": "MIT",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "license": "Apache-2.0",
   "author": "Get In",
   "description": "Appetizer é uma UI Kit em React que ajuda os desenvolvedores e designers do @getinapp a construir interfaces de usuário consistentes e sem esforço.",
   "repository": {
@@ -25,7 +26,7 @@
   },
   "homepage": "https://github.com/getinapp/appetizer#readme",
   "scripts": {
-    "build": "tsc -d",
+    "build": "rollup -c",
     "release": "auto shipit --no-changelog --base-branch=master --email=wendelfreitasbranco@gmail.com",
     "commit": "git-cz",
     "storybook": "start-storybook -s ./public -p 6006",
@@ -42,6 +43,9 @@
     "@babel/core": "^7.16.7",
     "@commitlint/cli": "^16.0.1",
     "@commitlint/config-conventional": "^16.0.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@storybook/addon-a11y": "^6.4.9",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
@@ -75,6 +79,10 @@
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rollup": "^2.64.0",
+    "rollup-plugin-dts": "^4.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   },
