chore: add src to include array in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,10 +24,10 @@
     "sourceMap": true,
     "outDir": "dist",
     "moduleResolution": "node",
-    "emitDeclarationOnly": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true
   },
+  "include": ["src"],
   "exclude": [
     "dist",
     "node_modules",
