feat: build appetizer using rollup with new config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "jsx": "react",
     "module": "ESNext",
     "declaration": true,
-    "declarationDir": "types",
+    "declarationDir": "dist",
     "sourceMap": true,
     "outDir": "dist",
     "moduleResolution": "node",
