--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@getinapp/appetizer",
   "version": "1.2.4",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "license": "Apache-2.0",
   "author": "Get In",
   "description": "Appetizer é uma UI Kit em React que ajuda os desenvolvedores e designers do @getinapp a construir interfaces de usuário consistentes e sem esforço.",
@@ -45,7 +46,6 @@
     "@commitlint/config-conventional": "^16.0.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.0",
     "@storybook/addon-a11y": "^6.4.9",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
@@ -80,9 +80,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup": "^2.64.0",
-    "rollup-plugin-dts": "^4.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.1",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   },
