--- a/package.json
+++ b/package.json
@@ -130,6 +130,9 @@
     }
   },
   "dependencies": {
+    "polished": "^4.1.3",
+    "react-icons": "^4.3.1",
+    "react-select": "^5.2.1",
     "@styled-icons/fluentui-system-filled": "^10.35.0",
     "@styled-icons/ionicons-solid": "^10.34.0",
     "react-imask": "^6.0.7",
